corregido a como era en el examen

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <h1>Perritos</h1>
     <section>
         <h2>Perritos aleatorios</h2>
-
         <img id=image1 alt="">
         <button id="btn1">Guardar en favoritos</button>
-
-        <article>
-            <img id="image2" alt="">
-            <button id="btn2">Guardar en favoritos</button>
         </article>
         <article>
+            <img id="image2" alt="">
+            <button idl="btn2">Guardar en favoritos</button>
+        </article>
+        <article/>
             <img id="image3" alt="">
             <button id="btn3">Guardar en favoritosS</button>
         </article>
